Automatically backed up by Learn

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -3,8 +3,8 @@
   <%= f.label :name %>
   <%= f.text_field :name %><br />
   
-  <%= f.label :bio %>
-  <%= f.text_area :bio %><br />
+  <%= f.label :artist_id %>
+  <%= f.number_field :artist_id %><br />
   
   <%= f.submit %>
 <% end %>
