Automatically backed up by Learn

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -6,5 +6,8 @@
   <%= f.label :artist_id %>
   <%= f.number_field :artist_id %><br />
   
+  <%= f.label :genre_id %>
+  <%= f.number_field :genre_id %><br />
+  
   <%= f.submit %>
 <% end %>
