--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Artist Form</h1>
-<%= form_for @artist do |f| %>
+<h1>Song Form</h1>
+<%= form_for @song do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %><br />
   
